CD_RTSL_parser/parser.output
Terminals unused in grammar

    ERROR
    STRUCT
    ILLUMINANCE
    AMBIENT
    SCRATCH


State 337 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 variable_identifier: IDENTIFIER
    2                    | STATE

    3 primary_expression: variable_identifier
    4                   | INT
    5                   | UINT
    6                   | FLOAT
    7                   | DOUBLE
    8                   | BOOL
    9                   | '(' expression ')'

   10 postfix_expression: primary_expression
   11                   | postfix_expression '[' integer_expression ']'
   12                   | function_call
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression INC_OP
   15                   | postfix_expression DEC_OP

   16 integer_expression: expression

   17 function_call: function_call_or_method

   18 function_call_or_method: function_call_generic

   19 function_call_generic: function_call_header_with_parameters ')'
   20                      | function_call_header_no_parameters ')'

   21 function_call_header_no_parameters: function_call_header VOID
   22                                   | function_call_header

   23 function_call_header_with_parameters: function_call_header assignment_expression
   24                                     | function_call_header_with_parameters ',' assignment_expression

   25 function_call_header: function_identifier '('

   26 function_identifier: TYPE
   27                    | postfix_expression

   28 unary_expression: postfix_expression
   29                 | INC_OP unary_expression
   30                 | DEC_OP unary_expression
   31                 | unary_operator unary_expression

   32 unary_operator: '+'
   33               | '-'
   34               | '!'
   35               | '~'

   36 multiplicative_expression: unary_expression
   37                          | multiplicative_expression '*' unary_expression
   38                          | multiplicative_expression '/' unary_expression
   39                          | multiplicative_expression '%' unary_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression '+' multiplicative_expression
   42                    | additive_expression '-' multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_OP additive_expression
   45                 | shift_expression RIGHT_OP additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression '<' shift_expression
   48                      | relational_expression '>' shift_expression
   49                      | relational_expression LE_OP shift_expression
   50                      | relational_expression GE_OP shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQ_OP relational_expression
   53                    | equality_expression NE_OP relational_expression

   54 and_expression: equality_expression
   55               | and_expression '&' equality_expression

   56 exclusive_or_expression: and_expression
   57                        | exclusive_or_expression '^' and_expression

   58 inclusive_or_expression: exclusive_or_expression
   59                        | inclusive_or_expression '|' exclusive_or_expression

   60 logical_and_expression: inclusive_or_expression
   61                       | logical_and_expression AND_OP inclusive_or_expression

   62 logical_xor_expression: logical_and_expression
   63                       | logical_xor_expression XOR_OP logical_and_expression

   64 logical_or_expression: logical_xor_expression
   65                      | logical_or_expression OR_OP logical_xor_expression

   66 conditional_expression: logical_or_expression
   67                       | logical_or_expression '?' expression ':' assignment_expression

   68 assignment_expression: conditional_expression
   69                      | unary_expression assignment_operator assignment_expression

   70 assignment_operator: '='
   71                    | MUL_ASSIGN
   72                    | DIV_ASSIGN
   73                    | MOD_ASSIGN
   74                    | ADD_ASSIGN
   75                    | SUB_ASSIGN
   76                    | LEFT_ASSIGN
   77                    | RIGHT_ASSIGN
   78                    | AND_ASSIGN
   79                    | XOR_ASSIGN
   80                    | OR_ASSIGN

   81 expression: assignment_expression
   82           | expression ',' assignment_expression

   83 constant_expression: conditional_expression

   84 declaration: function_prototype ';'
   85            | init_declarator_list ';'
   86            | PRECISION precision_qualifier TYPE
   87            | type_qualifier IDENTIFIER '{' struct_declaration_list '}' ';'
   88            | type_qualifier IDENTIFIER '{' struct_declaration_list '}' IDENTIFIER ';'
   89            | type_qualifier IDENTIFIER '{' struct_declaration_list '}' IDENTIFIER array_specifier ';'
   90            | type_qualifier ';'
   91            | type_qualifier IDENTIFIER ';'
   92            | type_qualifier IDENTIFIER identifier_list ';'
   93            | CLASS IDENTIFIER ':' interface_types ';'
   94            | TYPE IDENTIFIER ';'

   95 interface_types: RT_PRIMITIVE
   96                | RT_CAMERA
   97                | RT_MATERIAL
   98                | RT_TEXTURE
   99                | RT_LIGHT

  100 identifier_list: ',' IDENTIFIER
  101                | identifier_list ',' IDENTIFIER

  102 function_prototype: function_declarator ')'

  103 function_declarator: function_header
  104                    | function_header_with_parameters

  105 function_header_with_parameters: function_header parameter_declaration
  106                                | function_header_with_parameters ',' parameter_declaration

  107 function_header: TYPE IDENTIFIER '('

  108 parameter_declarator: TYPE IDENTIFIER
  109                     | TYPE IDENTIFIER array_specifier

  110 parameter_declaration: type_qualifier parameter_declarator
  111                      | parameter_declarator
  112                      | type_qualifier parameter_type_specifier
  113                      | parameter_type_specifier

  114 parameter_type_specifier: TYPE

  115 init_declarator_list: single_declaration
  116                     | init_declarator_list ',' IDENTIFIER
  117                     | init_declarator_list ',' IDENTIFIER array_specifier
  118                     | init_declarator_list ',' IDENTIFIER array_specifier '=' initializer
  119                     | init_declarator_list ',' IDENTIFIER '=' initializer

  120 single_declaration: TYPE IDENTIFIER '=' initializer
  121                   | access_modifiers TYPE IDENTIFIER

  122 access_modifiers: PUBLIC
  123                 | PRIVATE

  124 invariant_qualifier: INVARIANT

  125 interpolation_qualifier: SMOOTH
  126                        | FLAT
  127                        | NOPERSPECTIVE

  128 layout_qualifier: LAYOUT '(' layout_qualifier_id_list ')'

  129 layout_qualifier_id_list: layout_qualifier_id
  130                         | layout_qualifier_id_list ',' layout_qualifier_id

  131 layout_qualifier_id: IDENTIFIER IDENTIFIER '=' constant_expression
  132                    | SHARED

  133 precise_qualifier: PRECISE

  134 type_qualifier: single_type_qualifier
  135               | type_qualifier single_type_qualifier

  136 single_type_qualifier: storage_qualifier
  137                      | layout_qualifier
  138                      | precision_qualifier
  139                      | interpolation_qualifier
  140                      | invariant_qualifier
  141                      | precise_qualifier

  142 storage_qualifier: CONST
  143                  | INOUT
  144                  | IN
  145                  | OUT
  146                  | CENTROID
  147                  | PATCH
  148                  | SAMPLE
  149                  | UNIFORM
  150                  | BUFFER
  151                  | SHARED
  152                  | COHERENT
  153                  | VOLATILE
  154                  | RESTRICT
  155                  | READONLY
  156                  | WRITEONLY
  157                  | SUBROUTINE
  158                  | ATTRIBUTE
  159                  | VARYING

  160 array_specifier: '(' ')'
  161                | '(' constant_expression ')'
  162                | array_specifier '(' ')'
  163                | array_specifier '(' constant_expression ')'

  164 precision_qualifier: HIGHP
  165                    | MEDIUMP
  166                    | LOWP

  167 struct_declaration_list: struct_declaration
  168                        | struct_declaration_list struct_declaration

  169 struct_declaration: TYPE struct_declarator_list ';'
  170                   | type_qualifier TYPE struct_declarator_list ';'

  171 struct_declarator_list: struct_declarator
  172                       | struct_declarator_list ',' struct_declarator

  173 struct_declarator: IDENTIFIER
  174                  | IDENTIFIER array_specifier

  175 initializer: assignment_expression
  176            | '{' initializer_list '}'
  177            | '{' initializer_list ',' '}'

  178 initializer_list: initializer
  179                 | initializer_list ',' initializer

  180 declaration_statement: declaration

  181 statement: compound_statement
  182          | simple_statement

  183 simple_statement: declaration_statement
  184                 | expression_statement
  185                 | selection_statement
  186                 | switch_statement
  187                 | case_label
  188                 | iteration_statement
  189                 | jump_statement

  190 compound_statement: '{' '}'
  191                   | '{' statement_list '}'

  192 statement_no_new_scope: compound_statement_no_new_scope
  193                       | simple_statement

  194 compound_statement_no_new_scope: '{' '}'
  195                                | '{' statement_list '}'

  196 statement_list: statement
  197               | statement_list statement

  198 expression_statement: ';'
  199                     | expression ';'

  200 selection_statement: IF '(' expression ')' statement ELSE statement
  201                    | IF '(' expression ')' statement

  202 condition: expression

  203 switch_statement: SWITCH '(' expression ')' '{' switch_statement_list '}'

  204 switch_statement_list: %empty
  205                      | statement_list

  206 case_label: CASE expression ':'
  207           | DEFAULT ':'

  208 iteration_statement: WHILE '(' condition ')' statement_no_new_scope
  209                    | DO statement WHILE '(' expression ')' ';'
  210                    | FOR '(' for_init_statement for_rest_statement ')' statement_no_new_scope

  211 for_init_statement: expression_statement
  212                   | declaration_statement

  213 conditionopt: condition
  214             | %empty

  215 for_rest_statement: conditionopt ';'
  216                   | conditionopt ';' expression

  217 jump_statement: CONTINUE ';'
  218               | BREAK ';'
  219               | RETURN ';'
  220               | RETURN expression ';'
  221               | DISCARD ';'

  222 translation_unit: external_declaration
  223                 | translation_unit external_declaration

  224 external_declaration: function_definition
  225                     | declaration

  226 function_definition: function_prototype compound_statement_no_new_scope


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 34
    '%' (37) 39
    '&' (38) 55
    '(' (40) 9 25 107 128 160 161 162 163 200 201 203 208 209 210
    ')' (41) 9 19 20 102 128 160 161 162 163 200 201 203 208 209 210
    '*' (42) 37
    '+' (43) 32 41
    ',' (44) 24 82 100 101 106 116 117 118 119 130 172 177 179
    '-' (45) 33 42
    '.' (46) 13
    '/' (47) 38
    ':' (58) 67 93 206 207
    ';' (59) 84 85 87 88 89 90 91 92 93 94 169 170 198 199 209 215 216 217 218 219 220 221
    '<' (60) 47
    '=' (61) 70 118 119 120 131
    '>' (62) 48
    '?' (63) 67
    '[' (91) 11
    ']' (93) 11
    '^' (94) 57
    '{' (123) 87 88 89 176 177 190 191 194 195 203
    '|' (124) 59
    '}' (125) 87 88 89 176 177 190 191 194 195 203
    '~' (126) 35
    error (256)
    BOOL <bval> (258) 8
    INT <ival> (259) 4
    UINT <ival> (260) 5
    FLOAT <fval> (261) 6
    DOUBLE <fval> (262) 7
    TYPE <str> (263) 26 86 94 107 108 109 114 120 121 169 170
    STATE <str> (264) 2
    IDENTIFIER <str> (265) 1 13 87 88 89 91 92 93 94 100 101 107 108 109 116 117 118 119 120 121 131 173 174
    ERROR <str> (266)
    BREAK (267) 218
    CONTINUE (268) 217
    DO (269) 209
    FOR (270) 210
    WHILE (271) 208 209
    SWITCH (272) 203
    CASE (273) 206
    DEFAULT (274) 207
    IF (275) 200 201
    ELSE (276) 200
    RETURN (277) 219 220
    STRUCT (278)
    ATTRIBUTE (279) 158
    CONST (280) 142
    UNIFORM (281) 149
    VARYING (282) 159
    BUFFER (283) 150
    SHARED (284) 132 151
    COHERENT (285) 152
    VOLATILE (286) 153
    RESTRICT (287) 154
    READONLY (288) 155
    WRITEONLY (289) 156
    LAYOUT (290) 128
    CENTROID (291) 146
    FLAT (292) 126
    SMOOTH (293) 125
    NOPERSPECTIVE (294) 127
    PATCH (295) 147
    SAMPLE (296) 148
    SUBROUTINE (297) 157
    IN (298) 144
    OUT (299) 145
    INOUT (300) 143
    INVARIANT (301) 124
    PRECISE (302) 133
    DISCARD (303) 221
    LOWP (304) 166
    MEDIUMP (305) 165
    HIGHP (306) 164
    PRECISION (307) 86
    CLASS (308) 93
    ILLUMINANCE (309)
    AMBIENT (310)
    PUBLIC (311) 122
    PRIVATE (312) 123
    SCRATCH (313)
    RT_PRIMITIVE (314) 95
    RT_CAMERA (315) 96
    RT_MATERIAL (316) 97
    RT_TEXTURE (317) 98
    RT_LIGHT (318) 99
    LEFT_OP (319) 44
    RIGHT_OP (320) 45
    INC_OP (321) 14 29
    DEC_OP (322) 15 30
    LE_OP (323) 49
    GE_OP (324) 50
    EQ_OP (325) 52
    NE_OP (326) 53
    AND_OP (327) 61
    OR_OP (328) 65
    XOR_OP (329) 63
    MUL_ASSIGN (330) 71
    DIV_ASSIGN (331) 72
    ADD_ASSIGN (332) 74
    MOD_ASSIGN (333) 73
    LEFT_ASSIGN (334) 76
    RIGHT_ASSIGN (335) 77
    AND_ASSIGN (336) 78
    XOR_ASSIGN (337) 79
    OR_ASSIGN (338) 80
    SUB_ASSIGN (339) 75
    VOID (340) 21


Nonterminals, with rules where they appear

    $accept (110)
        on left: 0
    variable_identifier (111)
        on left: 1 2
        on right: 3
    primary_expression (112)
        on left: 3 4 5 6 7 8 9
        on right: 10
    postfix_expression (113)
        on left: 10 11 12 13 14 15
        on right: 11 13 14 15 27 28
    integer_expression (114)
        on left: 16
        on right: 11
    function_call (115)
        on left: 17
        on right: 12
    function_call_or_method (116)
        on left: 18
        on right: 17
    function_call_generic (117)
        on left: 19 20
        on right: 18
    function_call_header_no_parameters (118)
        on left: 21 22
        on right: 20
    function_call_header_with_parameters (119)
        on left: 23 24
        on right: 19 24
    function_call_header (120)
        on left: 25
        on right: 21 22 23
    function_identifier (121)
        on left: 26 27
        on right: 25
    unary_expression (122)
        on left: 28 29 30 31
        on right: 29 30 31 36 37 38 39 69
    unary_operator (123)
        on left: 32 33 34 35
        on right: 31
    multiplicative_expression (124)
        on left: 36 37 38 39
        on right: 37 38 39 40 41 42
    additive_expression (125)
        on left: 40 41 42
        on right: 41 42 43 44 45
    shift_expression (126)
        on left: 43 44 45
        on right: 44 45 46 47 48 49 50
    relational_expression (127)
        on left: 46 47 48 49 50
        on right: 47 48 49 50 51 52 53
    equality_expression (128)
        on left: 51 52 53
        on right: 52 53 54 55
    and_expression (129)
        on left: 54 55
        on right: 55 56 57
    exclusive_or_expression (130)
        on left: 56 57
        on right: 57 58 59
    inclusive_or_expression (131)
        on left: 58 59
        on right: 59 60 61
    logical_and_expression (132)
        on left: 60 61
        on right: 61 62 63
    logical_xor_expression (133)
        on left: 62 63
        on right: 63 64 65
    logical_or_expression (134)
        on left: 64 65
        on right: 65 66 67
    conditional_expression (135)
        on left: 66 67
        on right: 68 83
    assignment_expression (136)
        on left: 68 69
        on right: 23 24 67 69 81 82 175
    assignment_operator (137)
        on left: 70 71 72 73 74 75 76 77 78 79 80
        on right: 69
    expression (138)
        on left: 81 82
        on right: 9 16 67 82 199 200 201 202 203 206 209 216 220
    constant_expression (139)
        on left: 83
        on right: 131 161 163
    declaration (140)
        on left: 84 85 86 87 88 89 90 91 92 93 94
        on right: 180 225
    interface_types <str> (141)
        on left: 95 96 97 98 99
        on right: 93
    identifier_list (142)
        on left: 100 101
        on right: 92 101
    function_prototype (143)
        on left: 102
        on right: 84 226
    function_declarator (144)
        on left: 103 104
        on right: 102
    function_header_with_parameters (145)
        on left: 105 106
        on right: 104 106
    function_header (146)
        on left: 107
        on right: 103 105
    parameter_declarator (147)
        on left: 108 109
        on right: 110 111
    parameter_declaration (148)
        on left: 110 111 112 113
        on right: 105 106
    parameter_type_specifier (149)
        on left: 114
        on right: 112 113
    init_declarator_list (150)
        on left: 115 116 117 118 119
        on right: 85 116 117 118 119
    single_declaration (151)
        on left: 120 121
        on right: 115
    access_modifiers (152)
        on left: 122 123
        on right: 121
    invariant_qualifier (153)
        on left: 124
        on right: 140
    interpolation_qualifier (154)
        on left: 125 126 127
        on right: 139
    layout_qualifier (155)
        on left: 128
        on right: 137
    layout_qualifier_id_list (156)
        on left: 129 130
        on right: 128 130
    layout_qualifier_id (157)
        on left: 131 132
        on right: 129 130
    precise_qualifier (158)
        on left: 133
        on right: 141
    type_qualifier (159)
        on left: 134 135
        on right: 87 88 89 90 91 92 110 112 135 170
    single_type_qualifier (160)
        on left: 136 137 138 139 140 141
        on right: 134 135
    storage_qualifier (161)
        on left: 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159
        on right: 136
    array_specifier (162)
        on left: 160 161 162 163
        on right: 89 109 117 118 162 163 174
    precision_qualifier (163)
        on left: 164 165 166
        on right: 86 138
    struct_declaration_list (164)
        on left: 167 168
        on right: 87 88 89 168
    struct_declaration (165)
        on left: 169 170
        on right: 167 168
    struct_declarator_list (166)
        on left: 171 172
        on right: 169 170 172
    struct_declarator (167)
        on left: 173 174
        on right: 171 172
    initializer (168)
        on left: 175 176 177
        on right: 118 119 120 178 179
    initializer_list (169)
        on left: 178 179
        on right: 176 177 179
    declaration_statement (170)
        on left: 180
        on right: 183 212
    statement (171)
        on left: 181 182
        on right: 196 197 200 201 209
    simple_statement (172)
        on left: 183 184 185 186 187 188 189
        on right: 182 193
    compound_statement (173)
        on left: 190 191
        on right: 181
    statement_no_new_scope (174)
        on left: 192 193
        on right: 208 210
    compound_statement_no_new_scope (175)
        on left: 194 195
        on right: 192 226
    statement_list (176)
        on left: 196 197
        on right: 191 195 197 205
    expression_statement (177)
        on left: 198 199
        on right: 184 211
    selection_statement (178)
        on left: 200 201
        on right: 185
    condition (179)
        on left: 202
        on right: 208 213
    switch_statement (180)
        on left: 203
        on right: 186
    switch_statement_list (181)
        on left: 204 205
        on right: 203
    case_label (182)
        on left: 206 207
        on right: 187
    iteration_statement (183)
        on left: 208 209 210
        on right: 188
    for_init_statement (184)
        on left: 211 212
        on right: 210
    conditionopt (185)
        on left: 213 214
        on right: 215 216
    for_rest_statement (186)
        on left: 215 216
        on right: 210
    jump_statement (187)
        on left: 217 218 219 220 221
        on right: 189
    translation_unit (188)
        on left: 222 223
        on right: 0 223
    external_declaration (189)
        on left: 224 225
        on right: 222 223
    function_definition (190)
        on left: 226
        on right: 224


State 0

    0 $accept: . translation_unit $end

    TYPE           shift, and go to state 1
    ATTRIBUTE      shift, and go to state 2
    CONST          shift, and go to state 3
    UNIFORM        shift, and go to state 4
    VARYING        shift, and go to state 5
    BUFFER         shift, and go to state 6
    SHARED         shift, and go to state 7
    COHERENT       shift, and go to state 8
    VOLATILE       shift, and go to state 9
    RESTRICT       shift, and go to state 10
    READONLY       shift, and go to state 11
    WRITEONLY      shift, and go to state 12
    LAYOUT         shift, and go to state 13
    CENTROID       shift, and go to state 14
    FLAT           shift, and go to state 15
    SMOOTH         shift, and go to state 16
    NOPERSPECTIVE  shift, and go to state 17
    PATCH          shift, and go to state 18
    SAMPLE         shift, and go to state 19
    SUBROUTINE     shift, and go to state 20
    IN             shift, and go to state 21
    OUT            shift, and go to state 22
    INOUT          shift, and go to state 23
    INVARIANT      shift, and go to state 24
    PRECISE        shift, and go to state 25
    LOWP           shift, and go to state 26
    MEDIUMP        shift, and go to state 27
    HIGHP          shift, and go to state 28
    PRECISION      shift, and go to state 29
    CLASS          shift, and go to state 30
    PUBLIC         shift, and go to state 31
    PRIVATE        shift, and go to state 32

    declaration                      go to state 33
    function_prototype               go to state 34
    function_declarator              go to state 35
    function_header_with_parameters  go to state 36
    function_header                  go to state 37
    init_declarator_list             go to state 38
    single_declaration               go to state 39
    access_modifiers                 go to state 40
    invariant_qualifier              go to state 41
    interpolation_qualifier          go to state 42
    layout_qualifier                 go to state 43
    precise_qualifier                go to state 44
    type_qualifier                   go to state 45
    single_type_qualifier            go to state 46
    storage_qualifier                go to state 47
    precision_qualifier              go to state 48
    translation_unit                 go to state 49
    external_declaration             go to state 50
    function_definition              go to state 51


State 1

   94 declaration: TYPE . IDENTIFIER ';'
  107 function_header: TYPE . IDENTIFIER '('
  120 single_declaration: TYPE . IDENTIFIER '=' initializer

    IDENTIFIER  shift, and go to state 52


State 2

  158 storage_qualifier: ATTRIBUTE .

    $default  reduce using rule 158 (storage_qualifier)


State 3

  142 storage_qualifier: CONST .

    $default  reduce using rule 142 (storage_qualifier)


State 4

  149 storage_qualifier: UNIFORM .

    $default  reduce using rule 149 (storage_qualifier)


State 5

  159 storage_qualifier: VARYING .

    $default  reduce using rule 159 (storage_qualifier)


State 6

  150 storage_qualifier: BUFFER .

    $default  reduce using rule 150 (storage_qualifier)


State 7

  151 storage_qualifier: SHARED .

    $default  reduce using rule 151 (storage_qualifier)


State 8

  152 storage_qualifier: COHERENT .

    $default  reduce using rule 152 (storage_qualifier)


State 9

  153 storage_qualifier: VOLATILE .

    $default  reduce using rule 153 (storage_qualifier)


State 10

  154 storage_qualifier: RESTRICT .

    $default  reduce using rule 154 (storage_qualifier)


State 11

  155 storage_qualifier: READONLY .

    $default  reduce using rule 155 (storage_qualifier)


State 12

  156 storage_qualifier: WRITEONLY .

    $default  reduce using rule 156 (storage_qualifier)


State 13

  128 layout_qualifier: LAYOUT . '(' layout_qualifier_id_list ')'

    '('  shift, and go to state 53


State 14

  146 storage_qualifier: CENTROID .

    $default  reduce using rule 146 (storage_qualifier)


State 15

  126 interpolation_qualifier: FLAT .

    $default  reduce using rule 126 (interpolation_qualifier)


State 16

  125 interpolation_qualifier: SMOOTH .

    $default  reduce using rule 125 (interpolation_qualifier)


State 17

  127 interpolation_qualifier: NOPERSPECTIVE .

    $default  reduce using rule 127 (interpolation_qualifier)


State 18

  147 storage_qualifier: PATCH .

    $default  reduce using rule 147 (storage_qualifier)


State 19

  148 storage_qualifier: SAMPLE .

    $default  reduce using rule 148 (storage_qualifier)


State 20

  157 storage_qualifier: SUBROUTINE .

    $default  reduce using rule 157 (storage_qualifier)


State 21

  144 storage_qualifier: IN .

    $default  reduce using rule 144 (storage_qualifier)


State 22

  145 storage_qualifier: OUT .

    $default  reduce using rule 145 (storage_qualifier)


State 23

  143 storage_qualifier: INOUT .

    $default  reduce using rule 143 (storage_qualifier)


State 24

  124 invariant_qualifier: INVARIANT .

    $default  reduce using rule 124 (invariant_qualifier)


State 25

  133 precise_qualifier: PRECISE .

    $default  reduce using rule 133 (precise_qualifier)


State 26

  166 precision_qualifier: LOWP .

    $default  reduce using rule 166 (precision_qualifier)


State 27

  165 precision_qualifier: MEDIUMP .

    $default  reduce using rule 165 (precision_qualifier)


State 28

  164 precision_qualifier: HIGHP .

    $default  reduce using rule 164 (precision_qualifier)


State 29

   86 declaration: PRECISION . precision_qualifier TYPE

    LOWP     shift, and go to state 26
    MEDIUMP  shift, and go to state 27
    HIGHP    shift, and go to state 28

    precision_qualifier  go to state 54


State 30

   93 declaration: CLASS . IDENTIFIER ':' interface_types ';'

    IDENTIFIER  shift, and go to state 55


State 31

  122 access_modifiers: PUBLIC .

    $default  reduce using rule 122 (access_modifiers)


State 32

  123 access_modifiers: PRIVATE .

    $default  reduce using rule 123 (access_modifiers)


State 33

  225 external_declaration: declaration .

    $default  reduce using rule 225 (external_declaration)


State 34

   84 declaration: function_prototype . ';'
  226 function_definition: function_prototype . compound_statement_no_new_scope

    ';'  shift, and go to state 56
    '{'  shift, and go to state 57

    compound_statement_no_new_scope  go to state 58


State 35

  102 function_prototype: function_declarator . ')'

    ')'  shift, and go to state 59


State 36

  104 function_declarator: function_header_with_parameters .
  106 function_header_with_parameters: function_header_with_parameters . ',' parameter_declaration

    ','  shift, and go to state 60

    $default  reduce using rule 104 (function_declarator)


State 37

  103 function_declarator: function_header .
  105 function_header_with_parameters: function_header . parameter_declaration

    TYPE           shift, and go to state 61
    ATTRIBUTE      shift, and go to state 2
    CONST          shift, and go to state 3
    UNIFORM        shift, and go to state 4
    VARYING        shift, and go to state 5
    BUFFER         shift, and go to state 6
    SHARED         shift, and go to state 7
    COHERENT       shift, and go to state 8
    VOLATILE       shift, and go to state 9
    RESTRICT       shift, and go to state 10
    READONLY       shift, and go to state 11
    WRITEONLY      shift, and go to state 12
    LAYOUT         shift, and go to state 13
    CENTROID       shift, and go to state 14
    FLAT           shift, and go to state 15
    SMOOTH         shift, and go to state 16
    NOPERSPECTIVE  shift, and go to state 17
    PATCH          shift, and go to state 18
    SAMPLE         shift, and go to state 19
    SUBROUTINE     shift, and go to state 20
    IN             shift, and go to state 21
    OUT            shift, and go to state 22
    INOUT          shift, and go to state 23
    INVARIANT      shift, and go to state 24
    PRECISE        shift, and go to state 25
    LOWP           shift, and go to state 26
    MEDIUMP        shift, and go to state 27
    HIGHP          shift, and go to state 28

    $default  reduce using rule 103 (function_declarator)

    parameter_declarator      go to state 62
    parameter_declaration     go to state 63
    parameter_type_specifier  go to state 64
    invariant_qualifier       go to state 41
    interpolation_qualifier   go to state 42
    layout_qualifier          go to state 43
    precise_qualifier         go to state 44
    type_qualifier            go to state 65
    single_type_qualifier     go to state 46
    storage_qualifier         go to state 47
    precision_qualifier       go to state 48


State 38

   85 declaration: init_declarator_list . ';'
  116 init_declarator_list: init_declarator_list . ',' IDENTIFIER
  117                     | init_declarator_list . ',' IDENTIFIER array_specifier
  118                     | init_declarator_list . ',' IDENTIFIER array_specifier '=' initializer
  119                     | init_declarator_list . ',' IDENTIFIER '=' initializer

    ','  shift, and go to state 66
    ';'  shift, and go to state 67


State 39

  115 init_declarator_list: single_declaration .

    $default  reduce using rule 115 (init_declarator_list)


State 40

  121 single_declaration: access_modifiers . TYPE IDENTIFIER

    TYPE  shift, and go to state 68


State 41

  140 single_type_qualifier: invariant_qualifier .

    $default  reduce using rule 140 (single_type_qualifier)


State 42

  139 single_type_qualifier: interpolation_qualifier .

    $default  reduce using rule 139 (single_type_qualifier)


State 43

  137 single_type_qualifier: layout_qualifier .

    $default  reduce using rule 137 (single_type_qualifier)


State 44

  141 single_type_qualifier: precise_qualifier .

    $default  reduce using rule 141 (single_type_qualifier)


State 45

   87 declaration: type_qualifier . IDENTIFIER '{' struct_declaration_list '}' ';'
   88            | type_qualifier . IDENTIFIER '{' struct_declaration_list '}' IDENTIFIER ';'
   89            | type_qualifier . IDENTIFIER '{' struct_declaration_list '}' IDENTIFIER array_specifier ';'
   90            | type_qualifier . ';'
   91            | type_qualifier . IDENTIFIER ';'
   92            | type_qualifier . IDENTIFIER identifier_list ';'
  135 type_qualifier: type_qualifier . single_type_qualifier

    IDENTIFIER     shift, and go to state 69
    ATTRIBUTE      shift, and go to state 2
    CONST          shift, and go to state 3
    UNIFORM        shift, and go to state 4
    VARYING        shift, and go to state 5
    BUFFER         shift, and go to state 6
    SHARED         shift, and go to state 7
    COHERENT       shift, and go to state 8
    VOLATILE       shift, and go to state 9
    RESTRICT       shift, and go to state 10
    READONLY       shift, and go to state 11
    WRITEONLY      shift, and go to state 12
    LAYOUT         shift, and go to state 13
    CENTROID       shift, and go to state 14
    FLAT           shift, and go to state 15
    SMOOTH         shift, and go to state 16
    NOPERSPECTIVE  shift, and go to state 17
    PATCH          shift, and go to state 18
    SAMPLE         shift, and go to state 19
    SUBROUTINE     shift, and go to state 20
    IN             shift, and go to state 21
    OUT            shift, and go to state 22
    INOUT          shift, and go to state 23
    INVARIANT      shift, and go to state 24
    PRECISE        shift, and go to state 25
    LOWP           shift, and go to state 26
    MEDIUMP        shift, and go to state 27
    HIGHP          shift, and go to state 28
    ';'            shift, and go to state 70

    invariant_qualifier      go to state 41
    interpolation_qualifier  go to state 42
    layout_qualifier         go to state 43
    precise_qualifier        go to state 44
    single_type_qualifier    go to state 71
    storage_qualifier        go to state 47
    precision_qualifier      go to state 48


State 46

  134 type_qualifier: single_type_qualifier .

    $default  reduce using rule 134 (type_qualifier)


State 47

  136 single_type_qualifier: storage_qualifier .

    $default  reduce using rule 136 (single_type_qualifier)


State 48

  138 single_type_qualifier: precision_qualifier .

    $default  reduce using rule 138 (single_type_qualifier)


State 49

    0 $accept: translation_unit . $end
  223 translation_unit: translation_unit . external_declaration

    $end           shift, and go to state 72
    TYPE           shift, and go to state 1
    ATTRIBUTE      shift, and go to state 2
    CONST          shift, and go to state 3
    UNIFORM        shift, and go to state 4
    VARYING        shift, and go to state 5
    BUFFER         shift, and go to state 6
    SHARED         shift, and go to state 7
    COHERENT       shift, and go to state 8
    VOLATILE       shift, and go to state 9
    RESTRICT       shift, and go to state 10
    READONLY       shift, and go to state 11
    WRITEONLY      shift, and go to state 12
    LAYOUT         shift, and go to state 13
    CENTROID       shift, and go to state 14
    FLAT           shift, and go to state 15
    SMOOTH         shift, and go to state 16
    NOPERSPECTIVE  shift, and go to state 17
    PATCH          shift, and go to state 18
    SAMPLE         shift, and go to state 19
    SUBROUTINE     shift, and go to state 20
    IN             shift, and go to state 21
    OUT            shift, and go to state 22
    INOUT          shift, and go to state 23
    INVARIANT      shift, and go to state 24
    PRECISE        shift, and go to state 25
    LOWP           shift, and go to state 26
    MEDIUMP        shift, and go to state 27
    HIGHP          shift, and go to state 28
    PRECISION      shift, and go to state 29
    CLASS          shift, and go to state 30
    PUBLIC         shift, and go to state 31
    PRIVATE        shift, and go to state 32

    declaration                      go to state 33
    function_prototype               go to state 34
    function_declarator              go to state 35
    function_header_with_parameters  go to state 36
    function_header                  go to state 37
    init_declarator_list             go to state 38
    single_declaration               go to state 39
    access_modifiers                 go to state 40
    invariant_qualifier              go to state 41
    interpolation_qualifier          go to state 42
    layout_qualifier                 go to state 43
    precise_qualifier                go to state 44
    type_qualifier                   go to state 45
    single_type_qualifier            go to state 46
    storage_qualifier                go to state 47
    precision_qualifier              go to state 48
    external_declaration             go to state 73
    function_definition              go to state 51


State 50

  222 translation_unit: external_declaration .

    $default  reduce using rule 222 (translation_unit)


State 51

  224 external_declaration: function_definition .

    $default  reduce using rule 224 (external_declaration)


State 52

   94 declaration: TYPE IDENTIFIER . ';'
  107 function_header: TYPE IDENTIFIER . '('
  120 single_declaration: TYPE IDENTIFIER . '=' initializer

    '('  shift, and go to state 74
    '='  shift, and go to state 75
    ';'  shift, and go to state 76


State 53

  128 layout_qualifier: LAYOUT '(' . layout_qualifier_id_list ')'

    IDENTIFIER  shift, and go to state 77
    SHARED      shift, and go to state 78

    layout_qualifier_id_list  go to state 79
    layout_qualifier_id       go to state 80


State 54

   86 declaration: PRECISION precision_qualifier . TYPE

    TYPE  shift, and go to state 81


State 55

   93 declaration: CLASS IDENTIFIER . ':' interface_types ';'

    ':'  shift, and go to state 82


State 56

   84 declaration: function_prototype ';' .

    $default  reduce using rule 84 (declaration)


State 57

  194 compound_statement_no_new_scope: '{' . '}'
  195                                | '{' . statement_list '}'
